@@ -120,7 +120,7 @@ class CFrontendSetup {
 	 */
 	public function checkPhpMemoryLimit() {
 		$current = ini_get('memory_limit');
-		$check = ($current == '-1' || bccomp(str2mem($current), self::MIN_PHP_MEMORY_LIMIT) >= 0);
+		$check = ($current == '-1' || str2mem($current) >= self::MIN_PHP_MEMORY_LIMIT);
 
 		return [
 			'name' => _s('PHP option "%1$s"', 'memory_limit'),
@@ -128,8 +128,7 @@ class CFrontendSetup {
 			'required' => mem2str(self::MIN_PHP_MEMORY_LIMIT),
 			'result' => $check ? self::CHECK_OK : self::CHECK_FATAL,
 			'error' => _s('Minimum required PHP memory limit is %s (configuration option "memory_limit").',
-				mem2str(self::MIN_PHP_MEMORY_LIMIT)
-			)
+				mem2str(self::MIN_PHP_MEMORY_LIMIT))
 		];
 	}
 
@@ -145,12 +144,9 @@ class CFrontendSetup {
 			'name' => _s('PHP option "%1$s"', 'post_max_size'),
 			'current' => $current,
 			'required' => mem2str(self::MIN_PHP_POST_MAX_SIZE),
-			'result' => (bccomp(str2mem($current), self::MIN_PHP_POST_MAX_SIZE) >= 0)
-				? self::CHECK_OK
-				: self::CHECK_FATAL,
+			'result' => (str2mem($current) >= self::MIN_PHP_POST_MAX_SIZE) ? self::CHECK_OK : self::CHECK_FATAL,
 			'error' => _s('Minimum required size of PHP post is %s (configuration option "post_max_size").',
-				mem2str(self::MIN_PHP_POST_MAX_SIZE)
-			)
+				mem2str(self::MIN_PHP_POST_MAX_SIZE))
 		];
 	}
 
@@ -166,12 +162,9 @@ class CFrontendSetup {
 			'name' => _s('PHP option "%1$s"', 'upload_max_filesize'),
 			'current' => $current,
 			'required' => mem2str(self::MIN_PHP_UPLOAD_MAX_FILESIZE),
-			'result' => (bccomp(str2mem($current), self::MIN_PHP_UPLOAD_MAX_FILESIZE) >= 0)
-				? self::CHECK_OK
-				: self::CHECK_FATAL,
+			'result' => (str2mem($current) >= self::MIN_PHP_UPLOAD_MAX_FILESIZE) ? self::CHECK_OK : self::CHECK_FATAL,
 			'error' => _s('Minimum required PHP upload filesize is %s (configuration option "upload_max_filesize").',
-				mem2str(self::MIN_PHP_UPLOAD_MAX_FILESIZE)
-			)
+				mem2str(self::MIN_PHP_UPLOAD_MAX_FILESIZE))
 		];
 	}
 
